--- a/index.html
+++ b/index.html
@@ -22,25 +22,27 @@
                     <img src="image.png" alt="Logo" style="width: 50px; height: 50px;">
                 </div>
                 <h4 class="text-center">Iniciar sesión</h4>
+                <form novalidate id="loginForm">
                 <div class="row g-3">
                     <div class="col-12">
-                        <label for="">Usuario</label>
-                        <input type="text" class="form-control">
+                        <label for="username">Usuario</label>
+                        <input type="text" class="form-control" id="username">
                     </div>
                     <div class="col-12">
-                        <label for="">Contraseña</label>
-                        <input type="password" class="form-control mb-3">
+                        <label for="password">Contraseña</label>
+                        <input type="password" class="form-control mb-3" id="password">
                     </div>
                     <div class="col-12 text-center">
-                           <a><button class="btn btn-primary col-12 mb-4">Iniciar sesión</button></a>
+                           <button type="button" class="btn btn-primary col-12 mb-4" id="formButton">Iniciar sesión</button>
                         </div>
                     </div>
+                    </form>
                 </div>
             </div>
         </div>
     </div>
 
-
+    <script src="/src/js/controller/login.controller.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
