--- a/index.html
+++ b/index.html
@@ -5,21 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <!--<style>
+      body{
+        background-image: url('https://img.freepik.com/foto-gratis/fondo-abstracto-borroso_58702-1514.jpg');
+        background-size: cover; /* Asegura que cubra toda la pantalla */
+        background-position: center; /* Centra la imagen */
+        background-repeat: no-repeat; /* Evita que se repita */
+        height: 100vh; /* Altura de toda la ventana del navegador */
+        margin: 0; /* Elimina márgenes del body */
+        padding: 0; /* Elimina rellenos del body */
+      }
+    </style>-->
   </head>
-  <body>
-    <nav class="navbar bg-black">
-        <div class="container-fluid">
-          <span class="navbar-brand mb-0 h1 text-light">Sistema de Gestión de Proyectos</span>
-        </div>
-      </nav>
+  <body >
 
     <div class="d-flex align-items-center justify-content-center min-vh-100">
-
-        
         <div class="card col-3 border-0 shadow-lg">
             <div class="card-body">
                 <div class="text-center mb-4">
-                    <img src="image.png" alt="Logo" style="width: 50px; height: 50px;">
+                    <img src="/imagenes/image.png" alt="Logo" style="width: 50px; height: 50px;">
                 </div>
                 <h4 class="text-center">Iniciar sesión</h4>
                 <form novalidate id="loginForm">
